services/order/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: goodfood-order
spec:
  selector:
    app: goodfood-order
  ports:
    - name: "grpc"
      port: 50007
      targetPort: 50007
status:
  loadBalancer: {}
